fix(layout): height of main container on Firefox Android

--- a/components/globalStyle.css
+++ b/components/globalStyle.css
@@ -16,7 +16,6 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 input, textarea, select {
